# wizard-amigos-wasm-example

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  rust_wasm_js_interop.d.ts  rust_wasm_js_interop.js  rust_wasm_js_interop_bg.js  rust_wasm_js_interop_bg.wasm  rust_wasm_js_interop_bg.wasm.d.ts  webworker.js
src/: lib.rs  wizard.rs
web-app/: index.html  main.js  rust_wasm_js_interop.js  rust_wasm_js_interop_bg.wasm  rust_wasm_js_interop_bg.wasm.d.ts  webworker.js
