[package]
name = "rust-wasm-js-interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"


[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.45"
image = "0.24.4"
photon-rs = "0.3.1"
console_error_panic_hook = "0.1.6"
rand = "0.8.3"